--- a/ConsumeWebApiDemo/Views/Home/Index.cshtml
+++ b/ConsumeWebApiDemo/Views/Home/Index.cshtml
@@ -1,8 +1,54 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+
+
+@model IEnumerable<ConsumeWebApiDemo.Models.Employee>
+@*@{ ViewData["Title"] = "Index"; }*@
+
+<h1>Index</h1>
+
+
+
+
+
+
+
+
+
+@{ ViewData["Title"] = "Home Page"; }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
 </div>
+
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>Charges Range</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.FirstName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LastName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Title)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.BirthDate)
+            </td>
+        </tr>
+       }
+    </tbody>
+</table>
+
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
