--- a/ConsumeWebApiDemo/Views/EmployeeManager/Details.cshtml
+++ b/ConsumeWebApiDemo/Views/EmployeeManager/Details.cshtml
@@ -1,3 +1,77 @@
-﻿@page
-@{
-}
+﻿
+@model ConsumeWebApiDemo.Models.Employee
+@{ ViewData["Title"] = "Details Page"; }
+
+<h1>Details</h1>
+
+
+<h1>Transaction Details</h1>
+
+<div>
+
+
+    <dl class="row mt-5">
+        <dt class="col-sm-2 ">
+            @Html.DisplayNameFor(model => model.FirstName)
+        </dt>
+        <dd class="col-sm-10">
+            <strong>@Html.DisplayFor(model => model.FirstName)</strong>
+        </dd>
+
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.LastName)
+        </dt>
+        <dd class="col-sm-10">
+            <strong> @Html.DisplayFor(model => model.LastName)</strong>
+        </dd>
+
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Country)
+        </dt>
+
+        <dd class="col-sm-10">
+            <strong> @Html.DisplayFor(model => model.Country)</strong>
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.BirthDate)
+        </dt>
+
+        <dd class="col-sm-10">
+            <strong> @Html.DisplayFor(model => model.BirthDate)</strong>
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Title)
+        </dt>
+
+        <dd class="col-sm-10">
+            <strong> @Html.DisplayFor(model => model.Title)</strong>
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.HireDate)
+        </dt>
+
+        <dd class="col-sm-10">
+            <strong> @Html.DisplayFor(model => model.HireDate)</strong>
+        </dd>
+
+    </dl>
+</div>
+<div>
+
+    <a asp-action="TransferFunds">Back to TransferFunds</a>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
